# shoulder-to-shoulder

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FRONTEND_API_REQUIREMENTS.md  Makefile  PROJECT_ARCHITECTURE.md  README.md  REFACTORING_REPORT.md  docker-compose.dev.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  rr.txt
.github/: DEVELOPMENT.md  WORKFLOWS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-production.yml
.qwen/: settings.json
backend/: .env  .env.example  Dockerfile  requirements.txt  test-nats-client.py
backend/admin_service/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/common/: cors.py
backend/event_service/: .env.example  .env.example.py  Dockerfile  db.sql  pyproject.toml
backend/event_service/app/: main.py
backend/event_service/app/api/: dependencies.py
backend/event_service/app/api/v1/: events.py
backend/event_service/app/core/: config.py  database.py  nats_client.py
backend/event_service/app/models/: event.py  participant.py
backend/event_service/app/repositories/: event_repository.py
backend/event_service/app/schemas/: event.py
backend/event_service/app/services/: event_service.py
backend/gateway/: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml
backend/gateway/api/v1/endpoints/: admin_router.py  event_router.py  media_router.py  notification_router.py  proxy_router.py  router.py  user_router.py
backend/gateway/core/: http_client.py  security.py
backend/gateway/repositories/: service_registry.py
backend/gateway/services/: proxy_service.py
backend/maps_service/: .env-example  .env.example  Dockerfile  FRONTEND_TEST_DATA.json  TEST_DATA_SAFE_ROUTES.json  __init__.py  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test-nats-client.py
backend/maps_service/api/v1/endpoints/: NW_sports_grounds.py  __init__.py  events.py  meetups.py  places.py  routes.py
backend/maps_service/app/: __init__.py  main.py
backend/maps_service/models/: __init__.py  db_models.py  enums.py  schemas.py
backend/maps_service/repositories/: __init__.py  base_repository.py  meetup_repository.py  place_repository.py  sports_ground_repository.py
backend/maps_service/services/: NW_sports_ground_service.py  __init__.py  location_service.py  meetup_service.py  osrm_service.py  place_service.py  route_service.py
backend/maps_service/utils/: __init__.py  nats_client.py  security_route.py  validators.py
backend/media_service/: .env.example  Dockerfile  README.md
backend/notification_service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/user_service/: .env.example  Dockerfile  README.md  alembic.ini  db.sql  pyproject.toml
backend/user_service/app/: main.py
backend/user_service/app/api/: dependencies.py
backend/user_service/app/api/v1/: auth.py  matches.py  users.py
backend/user_service/app/core/: config.py  database.py  dependencies.py  nats_client.py  permissions.py  security.py
backend/user_service/app/core/badges/: registry.py
backend/user_service/app/domain/models/: user.py
backend/user_service/app/domain/repositories/: user_repository.py
backend/user_service/app/domain/schemas/: auth.py  rating.py  user.py
backend/user_service/app/domain/services/: auth_service.py  user_service.py
backend/user_service/app/models/: badge.py  match.py  profile.py  rating.py  user.py
backend/user_service/app/repositories/: badge_repository.py  match_repository.py  profile_repository.py  rating_repository.py  user_repository.py
backend/user_service/app/schemas/: auth.py  user.py
backend/user_service/app/services/: auth_service.py  badge_service.py  match_service.py  user_service.py
backend/user_service/migrations/: env.py
backend/user_service/migrations/versions/: 160d2fd1800e_add_badges_table.py  531389ec850b_initial_migration_create_users_user_.py  6c1981c28839_message.py
ctf-files/: CTF_COMPLETE_OVERVIEW.md  CTF_IMPLEMENTATION_GUIDE.md  CTF_MATERIALS_INDEX.txt  CTF_ORGANIZER_GUIDE.md  CTF_SCENARIO.md  README_CTF.md  START_HERE.md  ctf_poc_exploits.py  ctf_validator.py
frontend/: .env.local.example  .gitignore  API.md  ARCHITECTURE.md  BACKEND.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  GETTING_STARTED.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TESTING.md  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: .env.example  TODO.md  (+5 more)
(+204 files in other folders)
