[project]
name = "shoulder-to-shoulder"
version = "0.1.0"
description = "Monorepo приложения Плечом к плечу"
requires-python = ">=3.12"
dependencies = [
    "APScheduler>=3.10.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.2",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.27.0",
    "nats-py>=2.14.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pre-commit>=3.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
