[project]
name = "gateway-service"
version = "1.0.0"
description = "API Gateway for microservices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "aiohttp>=3.10.0",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.10.0",
    "uvicorn>=0.44.0",
]
