[project]
name = "user-service"
version = "0.1.0"
description = "User Service для приложения Плечом к плечу"
requires-python = ">=3.12"
dependencies = [
    # Core framework
    "fastapi[standard]>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    # Database & ORM
    "sqlalchemy[asyncio]>=2.0.49",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    # Pydantic & settings
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    # Auth & security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    # Message broker
    "nats-py>=2.14.0",
    # File uploads & HTTP client
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    # Caching
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
]

[tool.uv]
python = "3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
